# ferramenta_zoneamento

./: .gitignore  README.md  pipeline.py  pyproject.toml
scripts/: interseccao_mosaico.py  ndvi.py  recorte_talhao.py  tile_grid.py  zoneamento_isolado.py
