[project]
name = "ferramenta-zoneamento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fiona>=1.10.1",
    "geojson>=3.2.0",
    "geopandas>=1.1.3",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "requests>=2.33.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
]
